@@ -62,3 +62,6 @@ March, 2016 -- Perry
 Rework preprocessor definitions (SP2007, SP2010, SP2013) so they are inclusive
 Enhance feature deactivation traversals with better exception & logging
   and add prompt to choose whether to use Force flag
+Replace listWebApplications, location:0,32, size:412,69, events: SelectedIndexChanged
+ with gridWebApplications
+Upgraded WebAppEnumerator to return list of WebAppInfo (to include Admin flag)
